rest_api/infrastructure/aws-ecs/network/10_vpc_subnets.tf
resource "aws_vpc" "my_vpc" {
  cidr_block = var.vpc_cidr_block
  enable_dns_support = true
  enable_dns_hostnames = true

  tags = { Name = "my_vpc" }
}

resource "aws_subnet" "my_subnet1" {
  vpc_id                  = aws_vpc.my_vpc.id
  cidr_block              = var.subnet1_cidr_block
  availability_zone       = "eu-north-1a"
  map_public_ip_on_launch = true

  tags = { Name = "my_subnet1" }
}

resource "aws_subnet" "my_subnet2" {
  vpc_id                  = aws_vpc.my_vpc.id
  cidr_block              = var.subnet2_cidr_block
  availability_zone       = "eu-north-1b"
  map_public_ip_on_launch = true

  tags = { Name = "my_subnet2" }
}

resource "aws_elasticache_subnet_group" "my_subnet_group" {
  name       = "my-elasticache-subnet-group"
  subnet_ids = [aws_subnet.my_subnet1.id, aws_subnet.my_subnet2.id]
}

resource "aws_subnet" "public_subnet" {
  count                   = local.azs_count
  vpc_id                  = aws_vpc.my_vpc.id
  availability_zone       = local.azs_names[count.index]
  cidr_block              = cidrsubnet(aws_vpc.my_vpc.cidr_block, 8, 10 + count.index)
  map_public_ip_on_launch = true
  tags                    = { Name = "my_vpc-public-${local.azs_names[count.index]}" }
}
